Do not use constructors for URLs (as they are deprecated).